--- a/index.htm
+++ b/index.htm
@@ -5,12 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<! bootstrap css -->
+<!-- bootstrap css -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
 <!-- main css -->
   <link rel="stylesheet" href="css/main.css">
-<! -- font awesome -->
+<!-- font awesome -->
   <script src="js/all.js"></script>
+<!-- Animations -->
+  <script src="https://unpkg.com/scrollreveal"></script>
   <title>Rocky Gap, Virginia</title>
 </head>
 
@@ -25,58 +27,60 @@
   <span class="navbar-icon">
     <i class="fas fa-bars"></i>
   </span>
- </button>
-<!-- -->
-<div class="collapse navbar-collapse" id="myNav">
-  <ul class="navbar-nav mx-auto">
-    <li class="nav-item active">
-      <a href="index.htm" class="nav-link">
-       home
-      </a>
-   </li>
-   <li class="nav-item">
-    <a href="community.htm" class="nav-link">
-     community
-    </a>
-   </li>
-   <li class="nav-item">
-      <a href="education.htm" class="nav-link">
-       education
-      </a>
-   </li>
-   <li class="nav-item">
-      <a href="government.htm" class="nav-link">
-       government
-      </a>
-   </li>
-   <li class="nav-item">
-    <a href="photos.htm" class="nav-link" target="_blank">
-     gallery
-    </a>
-   </li>
-   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-     links
-    </a>
-  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-    <a class="dropdown-item" href="https://www.blandcountyva.gov/" target="_blank">Bland County Va Website</a>  
-    <a class="dropdown-item" href="https://blandcountyhistsoc.org/" target="_blank">Bland County Historical Society</a>
-    <a class="dropdown-item" href="https://www.bland.k12.va.us/" target="_blank">Bland County Public Schools</a>
-    <a class="dropdown-item" href="https://www.blandcountyva.gov/events/" target="_blank">Community Calendar</a>
-    <a class="dropdown-item" href="https://forecast.weather.gov/MapClick.php?lat=37.241440700000055&lon=-81.10675179999998#.YK2rg6hKjIU" target="_blank">Weather Forcast</a>
-  </div>
-    </li>
-  </ul>
+</button>
+  <div class="collapse navbar-collapse" id="myNav">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item active">
+        <a href="index.htm" class="nav-link">
+          home
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="community.htm" class="nav-link">
+          community
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="education.htm" class="nav-link">
+          education
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="government.htm" class="nav-link">
+          government
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="photos.htm" class="nav-link" target="_blank">
+          gallery
+        </a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          links
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="https://www.blandcountyva.gov/" target="_blank">Bland County Va Website</a>  
+          <a class="dropdown-item" href="https://blandcountyhistsoc.org/" target="_blank">Bland County Historical Society</a>
+          <a class="dropdown-item" href="https://www.bland.k12.va.us/" target="_blank">Bland County Public Schools</a>
+          <a class="dropdown-item" href="https://www.blandcountyva.gov/events/" target="_blank">Community Calendar</a>
+          <a class="dropdown-item" href="https://forecast.weather.gov/MapClick.php?lat=37.241440700000055&lon=-81.10675179999998#.YK2rg6hKjIU" target="_blank">Weather Forcast</a>
+        </div>
+      </li>
+    </ul>
  <!-- social icons -->
-<div class="nav-icons d-none d-lg-block">
-  <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="nav-icon">
-    <i class="fab fa-facebook"></i>
-  </a>
-  <a href="https://twitter.com/blandcountyva" target="_blank" class="nav-icon">
-    <i class="fab fa-twitter"></i>
-  </a>
-   </div>
- </div>
+    <div class="nav-icons d-none d-lg-block">
+      <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="nav-icon">
+        <i class="fab fa-facebook"></i>
+      </a>
+      <a href="https://twitter.com/blandcountyva" target="_blank" class="nav-icon">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="photos.htm" target="_blank" class="nav-icon">
+        <i class="fas fa-camera"></i>
+      </a>
+    </div>
+  </div>
 </nav>
 <!-- end of nav element -->
 
@@ -96,131 +100,136 @@
 <!-- Attractions section -->
 <section class="attractions py-5">
   <div class="container">
-<!-- section title -->
-<div class="row mb-5">
-  <div class="col d-flex flex-wrap text-uppercase justify-content-center">
-    <h1 class="font-weight-bold align-self-center mx-1">nearby</h1>
-    <h1 class="section-title--special mx-1">attractions</h1>
+    <!-- section title -->
+    <div class="row mb-5">
+      <div class="col d-flex flex-wrap text-uppercase justify-content-center">
+        <h1 class="font-weight-bold align-self-center mx-1">nearby</h1>
+        <h1 class="section-title--special mx-1">attractions</h1>
+      </div>
+    </div>
+    <!-- end of section title -->
+    <div class="row">
+    <!-- single attraction -->
+    <div class="col-sm-6 col-lg-3 text-center my-3">
+      <a href="https://www.google.com/search?ei=ZTK1XI21OaSKgge3l42ACQ&q=east+river+mountain+
+      overlook&oq=east+river+mountain+&gs_l=psy-ab.1.0.0i67j0j0i67l3j0j0i67j0l2j0i67.2464.2464
+      ..4374...0.0..0.93.93.1......0....1..gws-wiz.......0i71.kqUGwhIIDtU" target="_blank"
+      class="attraction-icon p-2 rounded-circle">
+      <i class="fas fa-tree fa-fw"></i></a>
+      <h6 class="text-uppercase font-weight-bold my-3">great scenery</h6>
+      <div class="attraction-underline"></div>
+        <p class="paragraph">
+          Rocky Gap offers some of the best country mountain scenery in the
+          Appalachian Mountains for those who enjoy the outdoors. The drive up East River
+          Mountain on Route 52 from Rocky Gap to the overlook on top of it in neighboring 
+          Bluefield WV is sure to please anytime of the year.
+        </p>
+      </div>
+      <!-- end of single attraction -->
+
+      <!-- single attraction -->
+      <div class="col-sm-6 col-lg-3 text-center my-3">
+        <a href="https://www.blandcountyva.gov/page/what-to-do/" 
+        class="attraction-icon p-2 rounded-circle" target="_blank">
+        <i class="fas fa-fish fa-fw"></i></a>
+        <h6 class="text-uppercase font-weight-bold my-3">outdoors/fishing</h6>
+        <div class="attraction-underline"></div>
+        <p class="paragraph">
+          Some of the best known trout fishing spots can be found along
+          the town's creeks. The abundance and size of trout in the creeks, make the spots
+          some of the most popular for area fishermen. Nearby Jefferson and George Washington
+          National Forests in Bland County VA are known for some of the best fishing, camping,
+          and trails, including the Appalachian Trail.
+        </p>
+      </div>
+      <!-- end of single attraction -->
+
+      <!-- single attraction -->
+      <div class="col-sm-6 col-lg-3 text-center my-3">
+        <a href="https://www.google.com/search?q=shopping+bland+county+va&oq=shopping+
+        bland+county+va&aqs=chrome..69i57.10752j0j7&sourceid=chrome&ie=UTF-8" 
+        class="attraction-icon p-2 rounded-circle" target="_blank">
+        <i class="fas fa-store fa-fw"></i></a>
+        <h6 class="text-uppercase font-weight-bold my-3">shopping</h6>
+        <div class="attraction-underline"></div>
+        <p class="paragraph">
+          Most of the shopping centers can be found over the mountain along
+          Route 460 in neighboring Bluefield WV and Bluefield VA. The Walmart and Lowes plazas 
+          can be found going west into the Virginia side and the Mercer Mall can be found going the
+          east direction into the West Virginia side.
+        </p>
+      </div>
+      <!-- end of single attraction -->
+
+      <!-- single attraction -->
+      <div class="col-sm-6 col-lg-3 text-center my-3">
+        <a href="http://www.indianvillage.org/" target="_blank" class="attraction-icon p-2 rounded-circle">
+        <i class="fas fa-history fa-fw"></i></a>
+        <h6 class="text-uppercase font-weight-bold my-3">historical attractions</h6>
+        <div class="attraction-underline"></div>
+        <p class="paragraph">
+          Wolfe Creek Indian Village and Museum is one of many nearby 
+          attractions in the area. It is a historical site, which provides a glimpse of the way 
+          of life of the state and area's first Native American settlers. The village and museum has 
+          attracted visitors from all over the world and the United States.
+        </p>
+      </div>
+      <!-- end of single attraction -->
+    </div>
   </div>
-</div>
-<!-- end of section title -->
-<div class="row">
-<!-- single attraction -->
-<div class="col-sm-6 col-lg-3 text-center my-3">
-  <a href="https://www.google.com/search?ei=ZTK1XI21OaSKgge3l42ACQ&q=east+river+mountain+
-  overlook&oq=east+river+mountain+&gs_l=psy-ab.1.0.0i67j0j0i67l3j0j0i67j0l2j0i67.2464.2464
-  ..4374...0.0..0.93.93.1......0....1..gws-wiz.......0i71.kqUGwhIIDtU" target="_blank"
-  class="attraction-icon p-2 rounded-circle">
-    <i class="fas fa-tree fa-fw"></i>
-  </a>
-  <h6 class="text-uppercase font-weight-bold my-3">great scenery</h6>
-  <div class="attraction-underline"></div>
-  <p class="paragraph">Rocky Gap offers some of the best country mountain scenery in the
-  Appalachian Mountains for those who enjoy the outdoors. The drive up East River
-  Mountain on Route 52 from Rocky Gap to the overlook on top of it in neighboring 
-  Bluefield WV is sure to please anytime of the year.</p>
-</div>
-<!-- end of single attraction -->
-
-<!-- single attraction -->
-<div class="col-sm-6 col-lg-3 text-center my-3">
-  <a href="https://www.blandcountyva.gov/page/what-to-do/" 
-  class="attraction-icon p-2 rounded-circle" target="_blank">
-    <i class="fas fa-fish fa-fw"></i>
-  </a>
-  <h6 class="text-uppercase font-weight-bold my-3">outdoors/fishing</h6>
-  <div class="attraction-underline"></div>
-  <p class="paragraph">Some of the best known trout fishing spots can be found along
-  the town's creeks. The abundance and size of trout in the creeks, make the spots
-  some of the most popular for area fishermen. Nearby Jefferson and George Washington
-  National Forests in Bland County VA are known for some of the best fishing, camping,
-  and trails, including the Appalachian Trail.</p>
-</div>
-<!-- end of single attraction -->
-
-<!-- single attraction -->
-<div class="col-sm-6 col-lg-3 text-center my-3">
-  <a href="https://www.google.com/search?q=shopping+bland+county+va&oq=shopping+
-   bland+county+va&aqs=chrome..69i57.10752j0j7&sourceid=chrome&ie=UTF-8" 
-   class="attraction-icon p-2 rounded-circle" target="_blank">
-    <i class="fas fa-store fa-fw"></i>
-  </a>
-  <h6 class="text-uppercase font-weight-bold my-3">shopping</h6>
-  <div class="attraction-underline"></div>
-  <p class="paragraph">Most of the shopping centers can be found over the mountain along
-  Route 460 in neighboring Bluefield WV and Bluefield VA. The Walmart and Lowes plazas 
-  can be found going west into the Virginia side and the Mercer Mall can be found going the
-  east direction into the West Virginia side.</p>
-</div>
-<!-- end of single attraction -->
-
-<!-- single attraction -->
-<div class="col-sm-6 col-lg-3 text-center my-3">
-  <a href="http://www.indianvillage.org/" target="_blank" class="attraction-icon p-2 rounded-circle">
-    <i class="fas fa-history fa-fw"></i>
-  </a>
-  <h6 class="text-uppercase font-weight-bold my-3">historical attractions</h6>
-  <div class="attraction-underline"></div>
-  <p class="paragraph">Wolfe Creek Indian Village and Museum is one of many nearby 
-  attractions in the area. It is a historical site, which provides a glimpse of the way 
-  of life of the state and area's first Native American settlers. The village and museum has 
-  attracted visitors from all over the world and the United States.
-  </p>
-</div>
-<!-- end of single attraction -->
- </div>
-</div>
 </section>
 <!-- end of attraction section -->
 
 <!-- about -->
 <section class="about section-padding" id="about">
   <div class="grid-container grid-container--medium-2">
-<!-- about container -->
+    <!-- about container -->
     <article class="about-container">
-<!-- first child -->
-<div class="section-title">
-  <h1 class="section-title_name bell-fonts">about</h1>
-  <div class="section-title_underline"></div>
-  <p class="section-title_text">Rocky Gap is an unincorporated small town located in
-   Bland County Virginia located in the south western part of the state. As of 2016, it is 
-   estimated that a total of 511 people live in Rocky Gap. The town is connected to 
-   neighboring Bluefield, WV by the East River Mountain Tunnel, which takes interstate
-   77 beneath East River Mountain. Rocky Gap is also known by area fishermen for it's 
-   abundance of trout fishing in it's creeks and by many others for it's great small town
-   country scenery. The town is also now home of the Bland County High School Bears, the
-   county's only high school. </p>
-</div>
-<!-- second child -->
-<div class="about_img">
-  <img src="img/Rocky Gap 52.jpg" class="about_img-item" alt="history-img">
- </div>
-</article>
-<!-- end of about container -->
+      <!-- first child -->
+      <div class="section-title">
+        <h1 class="section-title_name bell-fonts">about</h1>
+        <div class="section-title_underline"></div>
+        <p class="section-title_text">Rocky Gap is an unincorporated small town located in
+          Bland County Virginia located in the south western part of the state. As of 2016, it is 
+          estimated that a total of 511 people live in Rocky Gap. The town is connected to 
+          neighboring Bluefield, WV by the East River Mountain Tunnel, which takes interstate
+          77 beneath East River Mountain. Rocky Gap is also known by area fishermen for it's 
+          abundance of trout fishing in it's creeks and by many others for it's great small town
+          country scenery. The town is also now home of the Bland County High School Bears, the
+          county's only high school. </p>
+      </div>
+      <!-- second child -->
+      <div class="about_img">
+        <img src="img/Rocky Gap 52.jpg" class="about_img-item" alt="history-img">
+      </div>
+    </article>
+    <!-- end of about container -->
 
-<!-- about container -->
+    <!-- about container -->
     <article class="about-container">
-<!-- first child -->
-<div class="section-title">
-  <h1 class="section-title_name bell-fonts">history</h1>
-  <div class="section-title_underline"></div>
-  <p class="section-title_text">The old bank building of Rocky Gap was built a few
-  years before the Great Depression. Later on it became a local bakery and then an
-  antique store. The building is now vacant, but was recently renovated. Over the
-  years, the town has also been home to many small convenience stores that have come and gone. Most notable
-  is Carroll Brothers grocery, which was open for many years before closing in the late 1980's
-  and a restaurant next door called the Eagle's Nest and then Woody's that eventually closed
-  in the 1990's. Both buildings were eventually demolished, changing the appearance of 
-  that section of the town. While very few businesses still remain and the town awaits a
-  regrowth, it is still a peaceful and beautiful small town rich with the great memories
-  from years past by it's great people.</p>
-</div>
-<!-- second child -->
-<div class="about_img about_img-special">
-  <img src="img/Rocky Gap old building.jpg" class="about_img-item" alt="about-img">
- </div>
-</article>
-<!-- end of about container -->
+      <!-- first child -->
+      <div class="section-title">
+        <h1 class="section-title_name bell-fonts">history</h1>
+        <div class="section-title_underline"></div>
+        <p class="section-title_text">
+          The old bank building of Rocky Gap was built a few
+          years before the Great Depression. Later on it became a local bakery and then an
+          antique store. The building is now vacant, but was recently renovated. Over the
+          years, the town has also been home to many small convenience stores that have come and gone. Most notable
+          is Carroll Brothers grocery, which was open for many years before closing in the late 1980's
+          and a restaurant next door called the Eagle's Nest and then Woody's that eventually closed
+          in the 1990's. Both buildings were eventually demolished, changing the appearance of 
+          that section of the town. While very few businesses still remain and the town awaits a
+          regrowth, it is still a peaceful and beautiful small town rich with the great memories
+          from years past by it's great people.
+        </p>
+      </div>
+      <!-- second child -->
+      <div class="about_img about_img-special">
+        <img src="img/Rocky Gap old building.jpg" class="about_img-item" alt="about-img">
+      </div>
+    </article>
+    <!-- end of about container -->
   </div>
 </section>
 <!-- end of about -->
@@ -250,10 +259,11 @@
   </div>
 </footer>
 
-<! -- jquery -->
+<!-- jquery -->
   <script src="js/jquery-3.3.1.min.js"></script>
 <!-- bootstrap js --> 
   <script src="js/bootstrap.bundle.min.js"></script>
 <!-- script js --> 
+  <script src="JS/script.js"></script>
 </body>
 </html>
