--- a/community.htm
+++ b/community.htm
@@ -25,58 +25,60 @@
   <span class="navbar-icon">
     <i class="fas fa-bars"></i>
   </span>
- </button>
-<!-- -->
-<div class="collapse navbar-collapse" id="myNav">
-  <ul class="navbar-nav mx-auto">
-    <li class="nav-item active">
-      <a href="index.htm" class="nav-link">
-       home
-      </a>
-    </li>
-   <li class="nav-item">
-    <a href="community.htm" class="nav-link">
-     community
-    </a>
-   </li>
-   <li class="nav-item">
-      <a href="education.htm" class="nav-link">
-       education
-      </a>
-   </li>
-   <li class="nav-item">
-      <a href="government.htm" class="nav-link">
-       government
-      </a>
-   </li>
-    <li class="nav-item">
-    <a href="photos.htm" class="nav-link" target="_blank">
-     gallery
-    </a>
-   </li>
-   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-     links
-    </a>
-  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-    <a class="dropdown-item" href="https://www.blandcountyva.gov/" target="_blank">Bland County Va Website</a>  
-    <a class="dropdown-item" href="https://blandcountyhistsoc.org/" target="_blank">Bland County Historical Society</a>
-    <a class="dropdown-item" href="https://www.bland.k12.va.us/" target="_blank">Bland County Public Schools</a>
-    <a class="dropdown-item" href="https://www.blandcountyva.gov/events/" target="_blank">Community Calendar</a>
-    <a class="dropdown-item" href="https://forecast.weather.gov/MapClick.php?lat=37.241440700000055&lon=-81.10675179999998#.YK2rg6hKjIU" target="_blank">Weather Forcast</a>
-  </div>
-    </li>
- </ul>
+</button>
+  <div class="collapse navbar-collapse" id="myNav">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item active">
+        <a href="index.htm" class="nav-link">
+          home
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="community.htm" class="nav-link">
+          community
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="education.htm" class="nav-link">
+          education
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="government.htm" class="nav-link">
+          government
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="photos.htm" class="nav-link" target="_blank">
+          gallery
+        </a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          links
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="https://www.blandcountyva.gov/" target="_blank">Bland County Va Website</a>  
+          <a class="dropdown-item" href="https://blandcountyhistsoc.org/" target="_blank">Bland County Historical Society</a>
+          <a class="dropdown-item" href="https://www.bland.k12.va.us/" target="_blank">Bland County Public Schools</a>
+          <a class="dropdown-item" href="https://www.blandcountyva.gov/events/" target="_blank">Community Calendar</a>
+          <a class="dropdown-item" href="https://forecast.weather.gov/MapClick.php?lat=37.241440700000055&lon=-81.10675179999998#.YK2rg6hKjIU" target="_blank">Weather Forcast</a>
+        </div>
+      </li>
+    </ul>
  <!-- social icons -->
-<div class="nav-icons d-none d-lg-block">
-  <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="nav-icon">
-    <i class="fab fa-facebook"></i>
-  </a>
-  <a href="https://twitter.com/blandcountyva" target="_blank" class="nav-icon">
-    <i class="fab fa-twitter"></i>
-  </a>
-   </div>
- </div>
+    <div class="nav-icons d-none d-lg-block">
+      <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="nav-icon">
+        <i class="fab fa-facebook"></i>
+      </a>
+      <a href="https://twitter.com/blandcountyva" target="_blank" class="nav-icon">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="photos.htm" target="_blank" class="nav-icon">
+        <i class="fas fa-camera"></i>
+      </a>
+    </div>
+  </div>
 </nav>
 <!-- end of nav element -->
 
