--- a/index.htm
+++ b/index.htm
@@ -189,14 +189,16 @@
       <div class="section-title">
         <h1 class="section-title_name bell-fonts">about</h1>
         <div class="section-title_underline"></div>
-        <p class="section-title_text">Rocky Gap is an unincorporated small town located in
+        <p class="section-title_text">
+          Rocky Gap is an unincorporated small town located in
           Bland County Virginia located in the south western part of the state. As of 2016, it is 
           estimated that a total of 511 people live in Rocky Gap. The town is connected to 
           neighboring Bluefield, WV by the East River Mountain Tunnel, which takes interstate
           77 beneath East River Mountain. Rocky Gap is also known by area fishermen for it's 
           abundance of trout fishing in it's creeks and by many others for it's great small town
           country scenery. The town is also now home of the Bland County High School Bears, the
-          county's only high school. </p>
+          county's only high school. 
+        </p>
       </div>
       <!-- second child -->
       <div class="about_img">
