--- a/yearbook.htm
+++ b/yearbook.htm
@@ -15,7 +15,7 @@
       <button id="prev-button"> <i class="fa fa-caret-left"></i></button>
       <div class="img-container">
         <div id="main-img">
-          <img src="img/img-0.jpg" id="current">
+          <img src="yearbook-img/img-0.jpg" id="current">
         </div>
         <div id="caption-container"></div>
       </div>
@@ -25,81 +25,81 @@
       <div class="gallery-container">
         <h2>1950s</h2>
         <div class="imgs">
-          <img src="img/img-0.jpg" alt="Rocky Gap High School 1953">
-          <img src="img/img-1.jpg" alt="Freshman Class 1953">
-          <img src="img/img-2.jpg" alt="Baseball 1953">
-          <img src="img/img-3.jpg" alt="Seniors 1953">
-          <img src="img/img-4.jpg" alt="Boys Softball 1953">
-          <img src="img/img-5.jpg" alt="Sophomores 1954">
-          <img src="img/img-6.jpg" alt="RHS Buildings 1954">
-          <img src="img/img-7.jpg" alt="Juniors 1955">
-          <img src="img/img-8.jpg" alt="RHS Buildings 1955">
-          <img src="img/img-9.jpg" alt="Junior Varsity Softball 1955">
-          <img src="img/img-10.jpg" alt="Science Club 1956">
-          <img src="img/img-11.jpg" alt="RHS Buildings 1956">
-          <img src="img/img-12.jpg" alt="Seniors 1956">
-          <img src="img/img-13.jpg" alt="Rocky Gap High School 1956-57">
-          <img src="img/img-14.jpg" alt="Rocky Gap High School 1956-57">
-          <img src="img/img-15.jpg" alt="Boys Softball 1956">
-          <img src="img/img-16.jpg" alt="Rocky Gap School Buidings 1957">
-          <img src="img/img-17.jpg" alt="Rocky Gap High School 1958">
-          <img src="img/img-18.jpg" alt="Rocky Gap High School 1958">
-          <img src="img/img-19.jpg" alt="School Buildings 1959">
-          <img src="img/img-20.jpg" alt="Rocky Gap High School 1959">
-          <img src="img/img-21.jpg" alt="Playground 1959">
+          <img src="yearbook-img/img-0.jpg" alt="Rocky Gap High School 1953">
+          <img src="yearbook-img/img-1.jpg" alt="Freshman Class 1953">
+          <img src="yearbook-img/img-2.jpg" alt="Baseball 1953">
+          <img src="yearbook-img/img-3.jpg" alt="Seniors 1953">
+          <img src="yearbook-img/img-4.jpg" alt="Boys Softball 1953">
+          <img src="yearbook-img/img-5.jpg" alt="Sophomores 1954">
+          <img src="yearbook-img/img-6.jpg" alt="RHS Buildings 1954">
+          <img src="yearbook-img/img-7.jpg" alt="Juniors 1955">
+          <img src="yearbook-img/img-8.jpg" alt="RHS Buildings 1955">
+          <img src="yearbook-img/img-9.jpg" alt="Junior Varsity Softball 1955">
+          <img src="yearbook-img/img-10.jpg" alt="Science Club 1956">
+          <img src="yearbook-img/img-11.jpg" alt="RHS Buildings 1956">
+          <img src="yearbook-img/img-12.jpg" alt="Seniors 1956">
+          <img src="yearbook-img/img-13.jpg" alt="Rocky Gap High School 1956-57">
+          <img src="yearbook-img/img-14.jpg" alt="Rocky Gap High School 1956-57">
+          <img src="yearbook-img/img-15.jpg" alt="Boys Softball 1956">
+          <img src="yearbook-img/img-16.jpg" alt="Rocky Gap School Buidings 1957">
+          <img src="yearbook-img/img-17.jpg" alt="Rocky Gap High School 1958">
+          <img src="yearbook-img/img-18.jpg" alt="Rocky Gap High School 1958">
+          <img src="yearbook-img/img-19.jpg" alt="School Buildings 1959">
+          <img src="yearbook-img/img-20.jpg" alt="Rocky Gap High School 1959">
+          <img src="yearbook-img/img-21.jpg" alt="Playground 1959">
         </div>
         <h2>1960s</h2>
         <div class="imgs">
-          <img src="img/img-22.jpg" alt="Rocky Gap High School 1960">
-          <img src="img/img-23.jpg" alt="Seniors 1960">
-          <img src="img/img-24.jpg" alt="Senior Superlatives 1966">
-          <img src="img/img-25.jpg" alt="Rocky Gap High School 1966">
-          <img src="img/img-26.jpg" alt="Juniors 1967">
-          <img src="img/img-27.jpg" alt="Senior Superlatives 1967">
-          <img src="img/img-28.jpg" alt="Rocky Gap High School 1968">
-          <img src="img/img-29.jpg" alt="Seniors 1968">
-          <img src="img/img-30.jpg" alt="Seniors 1968">
-          <img src="img/img-31.jpg" alt="Faculty 1968">
-          <img src="img/img-32.jpg" alt="Basketball 1968">
+          <img src="yearbook-img/img-22.jpg" alt="Rocky Gap High School 1960">
+          <img src="yearbook-img/img-23.jpg" alt="Seniors 1960">
+          <img src="yearbook-img/img-24.jpg" alt="Senior Superlatives 1966">
+          <img src="yearbook-img/img-25.jpg" alt="Rocky Gap High School 1966">
+          <img src="yearbook-img/img-26.jpg" alt="Juniors 1967">
+          <img src="yearbook-img/img-27.jpg" alt="Senior Superlatives 1967">
+          <img src="yearbook-img/img-28.jpg" alt="Rocky Gap High School 1968">
+          <img src="yearbook-img/img-29.jpg" alt="Seniors 1968">
+          <img src="yearbook-img/img-30.jpg" alt="Seniors 1968">
+          <img src="yearbook-img/img-31.jpg" alt="Faculty 1968">
+          <img src="yearbook-img/img-32.jpg" alt="Basketball 1968">
         </div>
         <h2>1970s</h2>
         <div class="imgs">
-          <img src="img/img-33.jpg" alt="Rocky Gap High School 1970">
-          <img src="img/img-34.jpg" alt="Seniors 1970">
-          <img src="img/img-35.jpg" alt="Rocky Gap High School 1971">
-          <img src="img/img-36.jpg" alt="Rocky Gap High School 1974">
-          <img src="img/img-37.jpg" alt="East River Mtn Tunnel 1975">
-          <img src="img/img-38.jpg" alt="I77 Rocky Gap VA 1975">
-          <img src="img/img-39.jpg" alt="Sophomore Class Officers 1976">
-          <img src="img/img-40.jpg" alt="Quote and Drawing 1976">
-          <img src="img/img-41.jpg" alt="Advertisement 1976">
-          <img src="img/img-42.jpg" alt="Science Club 1978">
-          <img src="img/img-43.jpg" alt="Rocky Gap High School 1978">
+          <img src="yearbook-img/img-33.jpg" alt="Rocky Gap High School 1970">
+          <img src="yearbook-img/img-34.jpg" alt="Seniors 1970">
+          <img src="yearbook-img/img-35.jpg" alt="Rocky Gap High School 1971">
+          <img src="yearbook-img/img-36.jpg" alt="Rocky Gap High School 1974">
+          <img src="yearbook-img/img-37.jpg" alt="East River Mtn Tunnel 1975">
+          <img src="yearbook-img/img-38.jpg" alt="I77 Rocky Gap VA 1975">
+          <img src="yearbook-img/img-39.jpg" alt="Sophomore Class Officers 1976">
+          <img src="yearbook-img/img-40.jpg" alt="Quote and Drawing 1976">
+          <img src="yearbook-img/img-41.jpg" alt="Advertisement 1976">
+          <img src="yearbook-img/img-42.jpg" alt="Science Club 1978">
+          <img src="yearbook-img/img-43.jpg" alt="Rocky Gap High School 1978">
         </div>
         <h2>1980s</h2>
         <div class="imgs">
-          <img src="img/img-44.jpg" alt="Students and Hallway 1980">
-          <img src="img/img-45.jpg" alt="Advertisement 1980">
-          <img src="img/img-46.jpg" alt="Students and Parking Lot 1981">
-          <img src="img/img-47.jpg" alt="Students and Hallway 1981">
-          <img src="img/img-48.jpg" alt="Cafeteria Personnel and Bus Drivers 1981-82">
-          <img src="img/img-49.jpg" alt="Spirit Week 1982">
-          <img src="img/img-50.jpg" alt="Faculty 1982">
-          <img src="img/img-51.jpg" alt="Basketball 1982">
-          <img src="img/img-52.jpg" alt="Advertisement 1982">
-          <img src="img/img-53.jpg" alt="Bus Drivers 1983">
-          <img src="img/img-54.jpg" alt="Cafeteria Personnel and Custodians 1983">
-          <img src="img/img-55.jpg" alt="Halloween 1983">
-          <img src="img/img-56.jpg" alt="May Court 1983">
-          <img src="img/img-57.jpg" alt="Pics with Quotes 1983">
-          <img src="img/img-58.jpg" alt="Faculty 1983-84">
-          <img src="img/img-59.jpg" alt="First Grade 1983-84">
-          <img src="img/img-60.jpg" alt="Second Grade 1983-84">
-          <img src="img/img-61.jpg" alt="Seniors 1984">
-          <img src="img/img-62.jpg" alt="Rocky Gap Elementary 1986">
-          <img src="img/img-63.jpg" alt="Advertisements 1987">
-          <img src="img/img-64.jpg" alt="Rocky Gap High School 1988">
-          <img src="img/img-65.jpg" alt="Rocky Gap High School 1990">
+          <img src="yearbook-img/img-44.jpg" alt="Students and Hallway 1980">
+          <img src="yearbook-img/img-45.jpg" alt="Advertisement 1980">
+          <img src="yearbook-img/img-46.jpg" alt="Students and Parking Lot 1981">
+          <img src="yearbook-img/img-47.jpg" alt="Students and Hallway 1981">
+          <img src="yearbook-img/img-48.jpg" alt="Cafeteria Personnel and Bus Drivers 1981-82">
+          <img src="yearbook-img/img-49.jpg" alt="Spirit Week 1982">
+          <img src="yearbook-img/img-50.jpg" alt="Faculty 1982">
+          <img src="yearbook-img/img-51.jpg" alt="Basketball 1982">
+          <img src="yearbook-img/img-52.jpg" alt="Advertisement 1982">
+          <img src="yearbook-img/img-53.jpg" alt="Bus Drivers 1983">
+          <img src="yearbook-img/img-54.jpg" alt="Cafeteria Personnel and Custodians 1983">
+          <img src="yearbook-img/img-55.jpg" alt="Halloween 1983">
+          <img src="yearbook-img/img-56.jpg" alt="May Court 1983">
+          <img src="yearbook-img/img-57.jpg" alt="Pics with Quotes 1983">
+          <img src="yearbook-img/img-58.jpg" alt="Faculty 1983-84">
+          <img src="yearbook-img/img-59.jpg" alt="First Grade 1983-84">
+          <img src="yearbook-img/img-60.jpg" alt="Second Grade 1983-84">
+          <img src="yearbook-img/img-61.jpg" alt="Seniors 1984">
+          <img src="yearbook-img/img-62.jpg" alt="Rocky Gap Elementary 1986">
+          <img src="yearbook-img/img-63.jpg" alt="Advertisements 1987">
+          <img src="yearbook-img/img-64.jpg" alt="Rocky Gap High School 1988">
+          <img src="yearbook-img/img-65.jpg" alt="Rocky Gap High School 1990">
         </div>
   
         <div class="yearbooks-link">
