--- a/yearbook.htm
+++ b/yearbook.htm
@@ -110,7 +110,7 @@
   
         <div class="school-banner">
           <h1>Rocky Gap High School</h1>
-          <img src="img/eagles-logo.jpg" class="banner-img" alt="Banner Image">
+          <img src="yearbook-img/eagles-logo.jpg" class="banner-img" alt="Banner Image">
         </div>
       </div> 
     </div>
